updated with autoupdate.sh

--- a/bat/makefile
+++ b/bat/makefile
@@ -1,10 +1,22 @@
+###########################
 # C/C++ makefile template
+###########################
 
+# Define Macros
 PROGRAM = main
 SRCS = main.cpp
 OBJS = main.o
 CC = g++
 CFLAGS = -W
 
+.SUFFIXES: .cpp .o
+
+#Primary Target
 $(PROGRAM):
-		$(CC) $(PROGRAM).cpp
+	$(CC) $(PROGRAM) $^
+
+.c.o:
+	$(CC) $(CFLAGS) -c $<
+
+clean:
+	$(RM) $(PRORAM) $(OBJS)
