updated with autoupdate.sh

--- a/cpp/project/game/makefile
+++ b/cpp/project/game/makefile
@@ -2,4 +2,4 @@ main:
 		g++ AppMain.cpp
 
 appdata:
-		g++ -imacros DBG.hpp -o AppData AppData.hpp
+		g++ -imacros ./debug/DBG.hpp -o ./debug/AppData AppData.hpp
