updated with autoupdate.sh

--- a/cpp/project/game/graphics/makefile
+++ b/cpp/project/game/graphics/makefile
@@ -1,2 +1,2 @@
 GLManager:
-	g++ GLManager.cpp
+	g++ -I/usr/X11/include -L/usr/X11R16/lib -lglut -lGLU -lGL -lXmu -lXext -lX11 -lm -lpthread GLManager.cpp
