--- a/cpp/project/game/graphics/makefile
+++ b/cpp/project/game/graphics/makefile
@@ -1,2 +1,4 @@
-GLManager:
-	g++ -I/usr/X11/include -L/usr/X11R16/lib -lglut -lGLU -lGL -lXmu -lXext -lX11 -lm -lpthread GLManager.cpp
+CFLAGS = -I/usr/X11R6/include
+LDLIBS = -L/usr/X11R6/lib -lglut -lGLU -lGL -lm 
+prog1: GLManager.cpp
+	$(CC) $(CFLAGS) GLManager.cpp $(LDLIBS)
